# BigXtractor

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  INTEGRATION.md  LICENSE  PLAN.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: vcpkg-build.yml
cmake/: big-config.cmake.in  bigx-config.cmake.in
examples/: extract_files.cpp  list_files.cpp
include/big/: archive.hpp  mmap.hpp  reader.hpp  writer.hpp
include/bigx/: archive.hpp  big.hpp  bigx.hpp  endian.hpp  mmap.hpp  reader.hpp  types.hpp  writer.hpp
ports/bigx/: portfile.cmake  usage  vcpkg.json
src/: archive.cpp  mmap.cpp  reader.cpp  writer.cpp
tests/: CMakeLists.txt  test_archive_incomplete_type.cpp  test_mmap.cpp  test_reader.cpp  test_real_archive.cpp  test_w3d_archive.cpp  test_writer.cpp
tests/test01/: FinalBIG1.big
tests/test02/: FinalBIG1.big  complex.docx  simple.txt
